[package]
name = "twitter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"


members = [
    "programs/twitter"
]

[lib]
crate-type = ["cdylib", "lib"]
name = "twitter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

